fixed nav link centering issue on desktop and mobile layout break point

--- a/css/index.css
+++ b/css/index.css
@@ -176,9 +176,19 @@ p {
   font-size: 4rem;
   margin-bottom: 15px;
 }
+.body nav .nav-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 30%;
+}
+@media (max-width: 500px) {
+  .body nav .nav-links {
+    width: 80%;
+  }
+}
 .body nav .nav-links a {
   text-decoration: none;
-  margin-right: 30px;
   font-family: #454A59;
   color: #454A59;
   font-size: 1.6rem;
